{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 114,
  "lineage": "99f4b909-0032-26b4-dd34-ca3f91045e73",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:654654537517:instance/i-01a5168fd68c6b204",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a5168fd68c6b204",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins_bookyland",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dda4ac99e38fe05a",
            "private_dns": "ip-11-0-1-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.126",
            "public_ip": "18.212.118.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00da090114d882766",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b250c65b1994688",
            "tags": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tags_all": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09cabc4b0bef93b60",
              "sg-0d95078b31fae34cf"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_bookyland_public_subnets",
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_sg_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_bookyland_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:internet-gateway/igw-09679d87bc71d1d56",
            "id": "igw-09679d87bc71d1d56",
            "owner_id": "654654537517",
            "tags": {
              "Name": "dev-bookyland-IG"
            },
            "tags_all": {
              "Name": "dev-bookyland-IG"
            },
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_bookyland_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:route-table/rtb-006be18b1e93cf2da",
            "id": "rtb-006be18b1e93cf2da",
            "owner_id": "654654537517",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-bookyland-private-rt"
            },
            "tags_all": {
              "Name": "dev-bookyland-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_bookyland_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:route-table/rtb-0fd1ac06369992752",
            "id": "rtb-0fd1ac06369992752",
            "owner_id": "654654537517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09679d87bc71d1d56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-bookyland-public-rt"
            },
            "tags_all": {
              "Name": "dev-bookyland-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_bookyland_public_internet_gateway",
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_bookyland_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066ae7fce71132a8e",
            "route_table_id": "rtb-006be18b1e93cf2da",
            "subnet_id": "subnet-0395a2c0b85dbfcac"
          },
          "dependencies": [
            "module.networking.aws_route_table.dev_bookyland_private_route_table",
            "module.networking.aws_subnet.dev_bookyland_private_subnets",
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099fde0f77a7b8d06",
            "route_table_id": "rtb-006be18b1e93cf2da",
            "subnet_id": "subnet-026334e8ec3311df4"
          },
          "dependencies": [
            "module.networking.aws_route_table.dev_bookyland_private_route_table",
            "module.networking.aws_subnet.dev_bookyland_private_subnets",
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_bookyland_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002a9905d8fb4fc87",
            "route_table_id": "rtb-0fd1ac06369992752",
            "subnet_id": "subnet-09b250c65b1994688"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_bookyland_public_internet_gateway",
            "module.networking.aws_route_table.dev_bookyland_public_route_table",
            "module.networking.aws_subnet.dev_bookyland_public_subnets",
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0884c502b9702c448",
            "route_table_id": "rtb-0fd1ac06369992752",
            "subnet_id": "subnet-051544f3156e37f21"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_bookyland_public_internet_gateway",
            "module.networking.aws_route_table.dev_bookyland_public_route_table",
            "module.networking.aws_subnet.dev_bookyland_public_subnets",
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_bookyland_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:subnet/subnet-0395a2c0b85dbfcac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0395a2c0b85dbfcac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654537517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-bookyland-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-bookyland-private-subnet-1"
            },
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:subnet/subnet-026334e8ec3311df4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026334e8ec3311df4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654537517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-bookyland-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-bookyland-private-subnet-2"
            },
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_bookyland_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:subnet/subnet-09b250c65b1994688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b250c65b1994688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654537517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-bookyland-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-bookyland-public-subnet-1"
            },
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:subnet/subnet-051544f3156e37f21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051544f3156e37f21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654537517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-bookyland-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-bookyland-public-subnet-2"
            },
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_bookyland_vpc_us_central_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:vpc/vpc-0338ceebc48273f7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_route_table_id": "rtb-03909a917b2ce34c8",
            "default_security_group_id": "sg-0bd73389e4449a8c1",
            "dhcp_options_id": "dopt-09ebce64f24188820",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0338ceebc48273f7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03909a917b2ce34c8",
            "owner_id": "654654537517",
            "tags": {
              "Name": "dev-bokyland-jenkins-us-east-vpc-1"
            },
            "tags_all": {
              "Name": "dev-bokyland-jenkins-us-east-vpc-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_sg_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:security-group/sg-0d95078b31fae34cf",
            "description": "Enable the port 8080 for Jenkins",
            "egress": [],
            "id": "sg-0d95078b31fae34cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow the port 8080 for Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for Jenkins",
            "name_prefix": "",
            "owner_id": "654654537517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group to allow SSH(22) \u0026 HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Group to allow SSH(22) \u0026 HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654537517:security-group/sg-09cabc4b0bef93b60",
            "description": "Enable port for HTTP(80) and SSH(22)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all the request outgoing from ec2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cabc4b0bef93b60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote ssh from anyware",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security group for EC2 to enable SSH(22), HTTPS(443) AND HTTP(80)",
            "name_prefix": "",
            "owner_id": "654654537517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.tg-load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_bookyland_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654537517:targetgroup/jenkins-load-balancer-tg/89bb86eb8395801d",
            "arn_suffix": "targetgroup/jenkins-load-balancer-tg/89bb86eb8395801d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654537517:targetgroup/jenkins-load-balancer-tg/89bb86eb8395801d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-load-balancer-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0338ceebc48273f7a"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.tg-load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_bookyland_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654537517:targetgroup/jenkins-load-balancer-tg/89bb86eb8395801d-20240622001535221300000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654537517:targetgroup/jenkins-load-balancer-tg/89bb86eb8395801d",
            "target_id": "i-01a5168fd68c6b204"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.networking.aws_subnet.dev_bookyland_public_subnets",
            "module.networking.aws_vpc.dev_bookyland_vpc_us_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_sg_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http",
            "module.tg-load-balancer.aws_lb_target_group.dev_bookyland_target_group"
          ]
        }
      ]
    }
  ]
}